[package]
name = "asd"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0" }
crossterm = "0.29.0"
color-eyre = "0.6.5"
#lipsum = "0.9.1"
chrono = "0.4.44"
#textwrap = "0.16.2"
#arboard = { version = "3.6.1" }
libc = "0.2.186"
#log = "0.4.30"
bitflags = "2.13.0"
cfg-if = "1.0.4"
once_cell = "1.21.4"
static_cell = "2.1.1"
indexmap = "2.14.0"
log = "0.4.30"